Add run persistence monitoring
Signed-off-by: Andrea Lamparelli <a.lamparelli95@gmail.com>